<resources>
	<string name="application_settings">Application Settings</string>
	<string name="sync_settings">Sync Settings</string>
	<string name="auto_sync">Automatically sync</string>
	<string name="sync_settings_category">Sync Settings</string>
	<string name="auto_sync_summary">Sync automatically in background</string>
	<string name="force_sync_on_activity">Force sync the manifest</string>
	<string name="addons_settings_category">Addons Settings</string>
	<string name="force_sync_addons_summary">Sync when starting the addons activity</string>
	<string name="nightlies_settings_category">Nightlies Settings</string>
	<string name="backup_rom">Backup Rom</string>
	<string name="wipe_cache">Wipe Cache</string>
	<string name="wipe_data">Wipe Data</string>
	<string name="google_app_installation">Install Google apps</string>
	<string name="gapps_not_downloaded">Google Apps not downloaded. Not flashing Google Apps with update.</string>
	<string name="choose_flash_options">Choose flashing options.</string>
	<string name="force_sync_nightlies_summary">Sync when starting the nightlies activity</string>
	<string name="please_wait">Please Wait...</string>
	<string name="retreiving_data">Retrieving data</string>
	<string name="manifest_null">"The addons manifest cannot be retrieved because the inputstream is null.\nDo you have a data connection?"</string>
	<string name="cannot_parse_manifest">"The addons manifest cannot be parsed. Please contact the rom developers @r2doesinc, @xoomdev or @linuxmotion."</string>
	<string name="refresh" >Refresh</string>
	<string name="refresh_all" >Refresh all</string>
	<string name="warning" >Warning</string>
	<string name="sdcard_not_mounted">"Sdard is not present or mounted. The addons portion requires an sdcard to use. Please insert or mount the sdcard to use the addons portion of the app."</string>
	<string name="clear_download_cache" >Clear download cache</string>
    <string name="app_name">God Mode</string>
	<string name="addons_and_roms">Addons and Roms</string>
	<string name="settings_title">God Mode Settings</string>
    <string name="settings_summary">Custom settings designed for OMFGB</string>
    <string name="addons_title">T3hh4xx0r Addons</string>
    <string name="addons_summary">Various addons availabe for your flashing needs</string>
    <string name="omgb_summary">Stable and stock</string>
    <string name="omgb_title">OMGB Builds</string>
    <string name="nightlies_summary">OMFGB nightlys, remember NO SUPPORT PROVIDED</string>
    <string name="nightlies_title">OMFGB Nightlys</string>
    <string name="addons_app_name">OMFGB Addons</string>
	<string name="install_warning" >About to install package</string>
	<string name="flash_warning" >About to flash package</string>
    <string name="title_color_picker">Pick a color</string>
    <string name="msg_color_picker">Tap on center color to confirm.\nPress back to cancel</string>
    <string name="app_label">God Mode</string>
    <string name="device_info_title">Device info</string>
    <string name="title_battery_history">Battery history</string>
    <string name="summary_battery_history">Summary of how battery has been used</string>
    <string name="title_battery_information">Battery information</string>
    <string name="summary_battery_information">Current battery status information</string>
    <string name="title_usage_statistics">Usage statistics</string>
    <string name="summary_usage_statistics">Summary of application usage</string>
    <string name="general_title">General</string>
    <string name="title_window_animations">Window animations</string>
    <string name="summary_window_animations">Speed of animations in individual windows</string>
    <string name="dialog_title_window_animations">Select window speed</string>
    <string name="title_transition_animations">Transition animations</string>
    <string name="summary_transition_animations">Speed of animations moving between screens</string>
    <string name="dialog_title_transition_animations">Select transition speed</string>
    <string name="title_fancy_ime_animations">Fancy input animations</string>
    <string name="summary_on_fancy_ime_animations">Use fancier animations for input method windows</string>
    <string name="summary_off_fancy_ime_animations">Use normal animations for input method windows</string>
    <string name="title_haptic_feedback">Haptic feedback</string>
    <string name="summary_on_haptic_feedback">Use haptic feedback with user interaction</string>
    <string name="summary_off_haptic_feedback">Use haptic feedback with user interaction</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">Overall size of fonts</string>
    <string name="dialog_title_font_size">Select font size</string>
    <string name="title_end_button">End button behavior</string>
    <string name="summary_end_button">Select End (red) button action</string>
    <string name="dialog_title_end_button">Select End button</string>
    <string name="applications_title">Applications</string>
    <string name="compatibility_mode_title">Compatibility Mode</string>
    <string name="compatibility_mode_summary_on">Run older apps in Compatibility mode. This require rebooting. </string>
    <string name="compatibility_mode_summary_off">Run older apps in Compatibility mode. This require rebooting. </string>
    <string name="custom_settings">Customizable Settings</string>
    <string name="homescreen_elements">Home Screens</string>
    <string name="homescreen_elements_about">Select number of home screens</string>
    <string name="choose_num_screens">Choose the number of home screens</string>
    <string name="three_screens">Three screens</string>
    <string name="five_screens">Five screens</string>
    <string name="seven_screens">Seven screens</string>
    <string name="category_other_launcher_settings">Other Launcher Settings</string>
    <string name="title_launcher_endless_loop">Launcher Endless Loop</string>
    <string name="summary_on_launcher_endless_loop">Workspace will continuously loop</string>
    <string name="summary_off_launcher_endless_loop">Workspace will not continuously loop</string>
    <string name="title_wallpaper_loop">Wallpaper Scrolling</string>
    <string name="summary_on_wallpaper_loop">Wallpaper will move as the homescreens are changed</string>
    <string name="summary_off_wallpaper_loop">Wallpaper will not move with the screens</string>
    <string name="title_launcher_orientation">Launcher Orientation</string>
    <string name="summary_on_launcher_orientation">Disable Launcher rotation"</string>
    <string name="summary_off_launcher_orientation">Enable Launcher rotation"</string>
    <string name="title_four_hotseats">Four Launcher Hotseat Buttons</string>
    <string name="summary_on_four_hotseats">Coming Soon</string>
    <string name="summary_off_four_hotseats">Coming Soon</string>
    <string name="number_screens_title">Change the number of screens</string>
    <string name="screen_changer_title">Screen number</string>
    <string name="screen_changer_title_summary">Set the number of screens</string>
    <string name="use_settings_title">Enable/Disable Settings</string>
    <string name="mappings_title">Button Mappings</string>
    <string name="tab_title_enable">Launcher mappings</string>
    <string name="using_tabs_summary">Set left and right launcher tabs</string>
    <string name="settings_launcher">Launcher Settings</string>
    <string name="settings_launcher_summary">Customize your launcher</string>
    <string name="select_farright_button">Select far right action button.</string>
    <string name="title_general_use_stock_launcher">Use Stock Launcher</string>
    <string name="summary_on_general_use_stock_launcher">Stock launcher will be used.</string>
    <string name="summary_off_general_use_stock_launcher"> Custom Launcher will be used.</string>
    <string name="group_applications">Applications</string>
    <string name="general_lockscreen_settings">General lockscreen settings</string>
    <string name="settings_lockscreen_summary">Customize your lockscreen</string>
    <string name="settings_lockscreen">Lockscreen Settings</string>
	<string name="wake_category">Screen wake settings</string>
    <string name="title_trackpad_wake_screen">Trackpad Wake</string>
    <string name="summary_on_trackpad_wake_screen">Pressing the trackpad will wake the device</string>
    <string name="summary_off_trackpad_wake_screen">Pressing the trackpad to wake the device will be disabled</string>
    <string name="title_volume_wake_screen">Volume Wake</string>
    <string name="summary_on_volume_wake_screen">Pressing the volume buttons will wake the device</string>
    <string name="settings_uioptions">UI Settings</string>
    <string name="settings_uioptions_summary">Customize your UI</string>
    <string name="title_use_screenon_anim">Use Screen On Animation?</string>
    <string name="summary_on_use_screenon_anim">Screen On Animation will be used</string>
    <string name="summary_off_use_screenon_anim">Screen On Animation will not be used</string>
    <string name="title_use_screenoff_anim">Use Screen Off Animation?</string>
    <string name="summary_on_use_screenoff_anim">Screen Off Animation will be used</string>
    <string name="summary_off_use_screenoff_anim">Screen Off Animation will not be used</string>
    <string name="title_volume_music_controls">Volume music controls</string>
    <string name="summary_on_volume_music_controls">Long pressing volume buttons will change tracks with screen off</string>
    <string name="summary_off_volume_music_controls">Long pressing to change tracks will not be used</string>
    <string name="pref_overscroll_title">Overscroll effect</string>
    <string name="pref_overscroll_summary">Choose how scrollable objects look when they overshoot</string>
    <string name="pref_overscroll_weight_title">Overscrolling weight</string>
    <string name="pref_overscroll_weight_summary">Select the weight of the scrollable objects</string>
	<string name="rotation_category_title">Accelerometer rotation</string>
	<string name="pref_rotation_90_title">90 degrees</string>
	<string name="pref_rotation_180_title">180 degrees</string>
	<string name="pref_rotation_270_title">270 degrees</string>
    <string name="title_expanded_widget">Notification power widget</string>
    <string name="summary_expanded_widget">Use the expanded views power widget</string>
    <string name="title_expanded_hide_onchange">Hide on change</string>
    <string name="summary_expanded_hide_onchange">Hide the notification pulldown after toggling a widget button</string>
    <string name="expanded_color_mask">Indicator color</string>
    <string name="title_widget_picker">Widget buttons</string>
    <string name="summary_widget_picker">Pick your widget buttons</string>
    <string name="title_widget_order">Widget button order</string>
    <string name="summary_widget_order">Order your widget buttons</string>
    <string name="title_buttons">Buttons</string>
    <string name="title_button_modes">Button modes</string>
    <string name="pref_brightness_mode_title">Brightness modes</string>
    <string name="pref_brightness_mode_summary">Choose how the brightness button changes modes</string>
    <string name="pref_network_mode_title">Network modes</string>
    <string name="pref_network_mode_summary">Choose how the NetworkMode button changes modes</string>
    <string name="pref_screentimeout_mode_title">Screentimeout modes</string>
    <string name="pref_screentimeout_mode_summary">Choose how the Screentimeout button changes modes</string>
    <string name="pref_ring_mode_title">Sound modes</string>
    <string name="pref_ring_mode_summary">Choose how the sound button changes modes</string>
    <string name="pref_flash_mode_title">Flash mode</string>
    <string name="pref_flash_mode_summary">Choose High / Death Ray</string>
</resources>