<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
            android:title="@string/use_settings_title" >
		<CheckBoxPreference
 	        android:key="screen_changer" 
        	android:title="@string/screen_changer_title" 
            android:summary="@string/screen_changer_title_summary"
            android:enabled="true" />
    </PreferenceCategory> 

    <PreferenceCategory	
    	    android:title="@string/number_screens_title"
    	    android:enabled="true"
    	    android:disableDependentsState="true">
		<ListPreference
   			android:key="num_screens"	
  			android:dependency="screen_changer"					
 			android:title="@string/homescreen_elements"
 			android:summary="@string/homescreen_elements_about"		 	  	
            android:entries="@array/number_of_screens"
		    android:entryValues="@array/number_of_screens_value" />
    </PreferenceCategory>
    <PreferenceCategory 
            android:title="@string/category_other_launcher_settings">
	    <CheckBoxPreference
		    android:key="launcher_endless_loop"
		    android:title="@string/title_launcher_endless_loop"
		    android:summaryOn="@string/summary_on_launcher_endless_loop"
		    android:summaryOff="@string/summary_off_launcher_endless_loop" />
        <CheckBoxPreference
            android:key="wallpaper_loop"
            android:title="@string/title_wallpaper_loop"
            android:summaryOn="@string/summary_on_wallpaper_loop"
            android:summaryOff="@string/summary_off_wallpaper_loop" />
        <CheckBoxPreference
            android:key="launcher_orientation"
            android:title="@string/title_launcher_orientation"
            android:summaryOn="@string/summary_on_launcher_orientation"
            android:summaryOff="@string/summary_off_launcher_orientation" />
	    <CheckBoxPreference
		    android:key="four_hotseats"
		    android:title="@string/title_four_hotseats"
		    android:summaryOn="@string/summary_on_four_hotseats"
            android:summaryOff="@string/summary_off_four_hotseats" />
    </PreferenceCategory>
</PreferenceScreen>
