<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/ui_overscroll_category_title">
        <ListPreference 
            android:key="pref_overscroll_effect"
            android:dialogTitle="@string/pref_overscroll_title"
            android:title="@string/pref_overscroll_title"
            android:summary="@string/pref_overscroll_summary"
            android:entries="@array/pref_overscroll_effect_entries"
            android:entryValues="@array/pref_overscroll_effect_values" />
        <ListPreference
            android:key="pref_overscroll_weight"
            android:dialogTitle="@string/pref_overscroll_weight_title"
            android:title="@string/pref_overscroll_weight_title"
            android:summary="@string/pref_overscroll_weight_summary"
            android:entries="@array/entries_overscroll_weight"
            android:entryValues="@array/values_overscroll_weight" />
	</PreferenceCategory>

	<PreferenceCategory
            android:title="@string/rotation_category_title">
		<CheckBoxPreference 
            android:key="pref_rotation_90"
			android:title="@string/pref_rotation_90_title" />
		<CheckBoxPreference 
            android:key="pref_rotation_180"
			android:title="@string/pref_rotation_180_title" />
		<CheckBoxPreference 
            android:key="pref_rotation_270"
			android:title="@string/pref_rotation_270_title" />
	</PreferenceCategory>
	   
    <PreferenceCategory 
            android:title="@string/miscui_category_title">
	    <CheckBoxPreference
		    android:key="electron_beam_animation_on"
		    android:title="@string/title_use_screenon_anim"
		    android:summaryOn="@string/summary_on_use_screenon_anim"
		    android:summaryOff="@string/summary_off_use_screenon_anim" />
	    <CheckBoxPreference
		    android:key="electron_beam_animation_off"
		    android:title="@string/title_use_screenoff_anim"
		    android:summaryOn="@string/summary_on_use_screenoff_anim"
		    android:summaryOff="@string/summary_off_use_screenoff_anim" />
	    <CheckBoxPreference
		    android:key="enable_vol_music_controls"
		    android:title="@string/title_volume_music_controls"
		    android:summaryOn="@string/summary_on_volume_music_controls"
		    android:summaryOff="@string/summary_off_volume_music_controls" />
    </PreferenceCategory>
</PreferenceScreen>
