<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory
	android:key="addons_category"
	android:title="@string/addons_and_roms"
	android:id="@+id/addons_category"
	>
	
        <PreferenceScreen android:key="addons"
                android:title="@string/addons_title" 
                android:summary="@string/addons_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.t3hh4xx0r"
                    android:targetClass="com.t3hh4xx0r.addons.OMFGBAddonsActivity" />
        </PreferenceScreen>
        
         <PreferenceScreen android:key="nightlies"
                android:title="@string/nightlies_title" 
                android:summary="@string/nightlies_summary">
                 <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.t3hh4xx0r"
                    android:targetClass="com.t3hh4xx0r.addons.nightlies.OMFGBNightlyActivity" />
        </PreferenceScreen>
        
       </PreferenceCategory> 


<PreferenceCategory
	android:title="@string/app_name"
	>
         <PreferenceScreen android:key="settings_launcher"
                android:title="@string/settings_launcher" 
                android:summary="@string/settings_launcher_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.t3hh4xx0r"
                    android:targetClass="com.t3hh4xx0r.god_mode.LauncherMode" />
        </PreferenceScreen>

        <PreferenceScreen android:key="settings_lockscreen"
                android:title="@string/settings_lockscreen" 
                android:summary="@string/settings_lockscreen_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.t3hh4xx0r"
                    android:targetClass="com.t3hh4xx0r.god_mode.LockscreenMode" />
        </PreferenceScreen>
        
        <PreferenceScreen android:key="settings_uioptions"
                android:title="@string/settings_uioptions" 
                android:summary="@string/settings_uioptions_summary">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.t3hh4xx0r"
                    android:targetClass="com.t3hh4xx0r.god_mode.UiOptions" />
        </PreferenceScreen>
 </PreferenceCategory> 
       
</PreferenceScreen>

